--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,6 +1,18 @@
 body {
     border: 1px solid green;
 }
+
 div {
     border: 1px solid red;
+}
+
+#genre-ul {
+    text-align:left;
+    list-style-type:circle;
+}
+
+.ul-header {
+    margin-bottom:0;
+    margin-left: auto;
+    margin-right: auto;
 }
