--- a/src/main/resources/templates/pages/searched.html
+++ b/src/main/resources/templates/pages/searched.html
@@ -30,32 +30,32 @@
       <tbody>
         <tr>
           <th scope="row">1</th>
-          <td><a href="/Zelda">Zelda</td>
-          <td><a href="/N64">N64</td>
+            <td><a href="/Zelda">Zelda</a></td>
+            <td><a href="/N64">N64</a></td>
           <td>19somethin</td>
         </tr>
         <tr>
           <th scope="row">2</th>
-          <td><a href="/Metroid_Prime">Metroid Prime</td>
-          <td><a href="/GC">GC</td>
+            <td><a href="/Metroid_Prime">Metroid Prime</a></td>
+            <td><a href="/GC">GC</a></td>
           <td>20somethin</td>
         </tr>
         <tr>
           <th scope="row">3</th>
-          <td><a href="/Halo">Halo</td>
-          <td><a href="/Xbox">Xbox</td>
+            <td><a href="/Halo">Halo</a></td>
+            <td><a href="/Xbox">Xbox</a></td>
           <td>20somethin</td>
         </tr>
         <tr>
           <th scope="row">4</th>
-          <td><a href="/Mario">Mario</td>
-          <td><a href="/Wii">Wii</td>
+            <td><a href="/Mario">Mario</a></td>
+            <td><a href="/Wii">Wii</a></td>
           <td>20somethin</td>
         </tr>
         <tr>
           <th scope="row">5</th>
-          <td><a href="/The_Last_of_Us">The Last of Us</td>
-          <td><a href="/PS4">PS4</td>
+            <td><a href="/The_Last_of_Us">The Last of Us</a></td>
+            <td><a href="/PS4">PS4</a></td>
           <td>20somethin</td>
         </tr>
       </tbody>
