Searched paged is being served correctly at 'lh:8080/test/searched'. Input tag was missing ending '/'> and causing a TemplateInputException.

--- a/src/main/resources/templates/pages/searched.html
+++ b/src/main/resources/templates/pages/searched.html
@@ -11,7 +11,7 @@
         <h1 class="title">GameScraper</h1>
         <div class="form-group">
             <label for="searchBar">Search by Game, Author, or Release Date.</label>
-            <input type="text" class="form-control search" id="searchBar" placeholder="Search">
+            <input type="text" class="form-control search" id="searchBar" placeholder="Search" />
         </div>
         <h6 style="margin-left: 70px;">Reviews scraped from the web.</h6>
 
