--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,19 +19,21 @@
     <div class="text-center">
         <p><a href="/games" th:href="@{/games}"></a></p>
     </div>
-    <div style = "margin-top: 4%;" class="text-left">
+    <div>
         <section>
-            <h3 class="ul-header text-left">Games By Genre</h3>
-            <ul style= "margin-top: 1%;">
-                <ul th:each="genre : ${genres}"><button class="btn btn-default genre-button" href="/genre/${genre.name}" type="submit"><span th:text="${genre.name}"></span></button></ul>
-            </ul>
+            <h3 style="margin-top: 5%;" class="ul-header">Games By Genre</h3>
+            <div style="margin-top: 1%; text-transform: lowercase;" class="clearfix">
+                <ul style="-webkit-padding-start: 0;">
+                    <ul style="-webkit-padding-start: 2%; -webkit-padding-end: 2%;" th:each="genre : ${genres}"><a class="btn btn-default genre-button" th:href="@{/genre/} + ${#strings.toLowerCase(genre.genre)}" type="submit"><span th:text="${genre.genre}"></span></a></ul>
+                </ul>
+            </div>
         </section>
     </div>
-    <div style ="margin-top: 5%;" >
+    <div style="margin-top: 1%;">
         <section>
             <h3 class="ul-header">Games by System</h3>
             <ul>
-                <ul th:each="system : ${systems}"><button class="btn btn-default genre-button" href="/system/${system.name}" type="submit"><span th:text="${system.name}"></span></button></ul>
+                <ul th:each="system : ${systems}"><a class="btn btn-default genre-button" th:href="@{/systems/} + ${#strings.toLowerCase(system.name)}" type="submit"><span th:text="${system.name}"></span></a></ul>
             </ul>
         </section>
     </div>
