--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -79,3 +79,15 @@ label{
    height: 0;
    clear: both;
 }
+
+.scores{
+    border-style: double;
+}
+
+.purchases{
+    border-style: ridge;
+}
+
+.odd{
+    background: lightgray;
+}
