--- a/src/main/resources/templates/genres/genre.html
+++ b/src/main/resources/templates/genres/genre.html
@@ -16,11 +16,11 @@
     <h6 style="margin-left: calc(5% + 27px);">Reviews scraped from the web</h6>
 </header>
 
-<h3 class="ul-header" style="margin-top: 5%;">Search Results</h3>
+<h3 class="ul-header" style="margin-top: 5%; text-transform: capitalize;" th:text="${#strings.toLowerCase(genre.genre)}"></h3>
 <table class="table table-hover results" id="resultsTable">
     <thead>
     <tr>
-        <th scope="row">#</th>
+        <th scope="row">Game</th>
         <td>Game</td>
         <td>System</td>
         <td>Released</td>
@@ -28,12 +28,25 @@
     </thead>
     <tbody>
         <tr th:each="game : ${genre.games}">
-            <th scope="row"><span th:text="${game.index}"></span></th>
-            <td><span th:text="${game.name}" href="/game/${game.name}"></span></td>
-            <td><span th:text="${game.system}"></span></td>
+            <th scope="row"><a th:text="${game.name}" href="/game/${game.name}" th:href="@{/game/} + ${game.name}"></a></th>
+            <td>
+                <div th:each="system : ${game.systems}" >
+                    <span th:text="${system.name}"></span>
+                </div>
+            </td>
             <td><span th:text="${game.release}"></span></td>
         </tr>
     </tbody>
 </table>
+
+<script>
+    var table = document.getElementById('resultsTable');
+    for(var i = 0; i < table.length; i++){
+
+        if((i % 2) == 1){
+            table[i].addClass('odd');
+        }
+    }
+</script>
 </body>
 </html>
