--- a/src/main/resources/templates/games/game.html
+++ b/src/main/resources/templates/games/game.html
@@ -61,12 +61,104 @@
     <thead>
         <tr>
             <th scope="row">Purchasable At</th>
-            <td>Price</td>
+            <th>Price</th>
         </tr>
     </thead>
-    <tbody>
+    <tbody class="purchases-body">
     <tr th:each="purchase : ${purchase}">
         <td><span th:text="${purchase.name}"></span></td>
+    </tr>
+    <tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr>
+    <tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
+    </tr><tr>
+        <td><span>WOW</span></td>
+        <td><span>WOW</span></td>
     </tr>
     </tbody>
 </table>
