--- a/src/main/resources/templates/games/game.html
+++ b/src/main/resources/templates/games/game.html
@@ -58,7 +58,7 @@
     </tbody>
 </table>
 
-<table style="width: 90%;" class="table table-hover results purchases" id="purchasesTable">
+<table style="width: 90%;" class="table results purchases" id="purchasesTable">
     <thead>
         <tr>
             <th scope="row" style="width: 55%;">Purchasable At</th>
