--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -54,6 +54,12 @@ label{
 	margin-left: 5%;
 	width: 92%;
 }
+.results-game{
+	margin-top: 1%;
+	margin-left: 5%;
+	width: 92%;
+	display: table-row;
+}
 
 .game-image{
 	display: inline;
