--- a/src/main/resources/templates/games/game.html
+++ b/src/main/resources/templates/games/game.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header class="text-left">
-    <h1 class="title">GameScraper</h1>
+    <h1 class="title" th:href="@{/}" onclick="goToIndex();">GameScraper</h1>
     <div class="form-group">
         <label style="margin-right: 3%;" for="searchBar">Search by Game, Author, or Release Date.</label>
         <input type="text" class="form-control search" id="searchBar" placeholder="Search"/>
@@ -18,120 +18,140 @@
 
 </header>
 
-<div class="clearfix">
-    <img th:src="${game.imageUrl}" th:alt="${game.name}" class="img-thumbnail game-image"></img>
-    <h1 class="ul-header game-image-description"><span th:text= "${game.name}"/></h1>
-</div>
+<div class="container">
+    <div class="clearfix">
+        <img th:src="${game.imageUrl}" th:alt="${game.name}" class="img-thumbnail game-image"></img>
+        <h1 class="ul-header game-image-description"><span th:text= "${game.name}"/></h1>
+    </div>
 
 
 
-<table style="width: 50%; float: left;" class="table table-hover results" id="resultsTable">
-    <thead>
-        <tr>
-            <th scope="row">Released</th>
-            <td><span th:text= "${game.release}"/></td>
-        </tr>
-    </thead>
-    <tbody>
-        <th scope="row">Systems</th>
+    <table style="width: 50%; float: left;" class="table table-hover results-game" id="resultsTable">
+        <thead>
+            <tr>
+                <th scope="row">Released</th>
+                <td><span th:text= "${game.release}"/></td>
+            </tr>
+        </thead>
+        <tbody>
+            <th scope="row">Systems</th>
+                <td>
+                    <div th:each="system : ${game.systems}" >
+                        <a th:text="${system.name}" th:href="@{/system/} + ${system.name}"> </a>
+                    </div>
+                </td>
+        </tbody>
+        <tbody>
+            <th scope="row">Publisher</th>
             <td>
-                <div th:each="system : ${game.systems}" >
-                    <span th:text="${system.name}"> </span>
+                <div>
+                    <span th:text="${game.publisher.name}"> </span>
                 </div>
             </td>
-    </tbody>
-</table>
+        </tbody>
+        <tbody>
+            <th scope="row">Developer</th>
+            <td>
+                <div>
+                    <span th:text="${game.developer.name}"> </span>
+                </div>
+            </td>
+        </tbody>
+    </table>
 
+    <table id="scoreTable" style="width: 35%; float:right; margin-right: 5%;" class="table table-hover results scores">
+        <thead>
+            <tr>
+                <th scope="row">Source</th>
+                <td>Score</td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="score : ${score}">
+                <td th:if="${scoreTable.length} % 2 == 0"><span  th:text="${score.name}: ${score.score}"></span></td>
+                <td th:if="${scoreTable.length} % 2 == 1" style="background: lightgray;"><span  th:text="${score.name}: ${score.score}"></span></td>
+            </tr>
+        </tbody>
+    </table>
 
-<table id="scoreTable" style="width: 35%; float:right; margin-right: 5%;" class="table table-hover results scores">
-    <thead>
+    <table style="width: 90%;" class="table results purchases" id="purchasesTable">
+        <thead>
+            <tr>
+                <th scope="row" style="width: 55%;">Purchasable At</th>
+                <th>Price</th>
+            </tr>
+        </thead>
+        <tbody class="purchases-body">
+        <tr th:each="purchase : ${purchase}">
+            <td><span th:text="${purchase.name}"></span></td>
+        </tr>
         <tr>
-            <th scope="row">Source</th>
-            <td>Score</td>
+            <td style="width: 55%;"><span>WOW</span></td>
+            <td><span>WOW</span></td>
+        </tr><tr>
+            <td style="width: 55%;"><span>WOW</span></td>
+            <td><span>WOW</span></td>
+        </tr><tr>
+            <td style="width: 55%;"><span>WOW</span></td>
+            <td><span>WOW</span></td>
+        </tr><tr>
+            <td style="width: 55%;"><span>WOW</span></td>
+            <td><span>WOW</span></td>
+        </tr><tr>
+            <td style="width: 55%;"><span>WOW</span></td>
+            <td><span>WOW</span></td>
+        </tr><tr>
+            <td style="width: 55%;"><span>WOW</span></td>
+            <td><span>WOW</span></td>
+        </tr><tr>
+            <td style="width: 55%;"><span>WOW</span></td>
+            <td><span>WOW</span></td>
+        </tr><tr>
+            <td style="width: 55%;"><span>WOW</span></td>
+            <td><span>WOW</span></td>
+        </tr><tr>
+            <td style="width: 55%;"><span>WOW</span></td>
+            <td><span>WOW</span></td>
+        </tr><tr>
+            <td style="width: 55%;"><span>WOW</span></td>
+            <td><span>WOW</span></td>
+        </tr><tr>
+            <td style="width: 55%;"><span>WOW</span></td>
+            <td><span>WOW</span></td>
+        </tr><tr>
+            <td style="width: 55%;"><span>WOW</span></td>
+            <td><span>WOW</span></td>
+        </tr><tr>
+            <td style="width: 55%;"><span>WOW</span></td>
+            <td><span>WOW</span></td>
+        </tr><tr>
+            <td style="width: 55%;"><span>WOW</span></td>
+            <td><span>WOW</span></td>
+        </tr><tr>
+            <td style="width: 55%;"><span>WOW</span></td>
+            <td><span>WOW</span></td>
         </tr>
-    </thead>
-    <tbody>
-        <tr th:each="score : ${score}">
-            <td th:if="${scoreTable.length} % 2 == 0"><span  th:text="${score.name}: ${score.score}"></span></td>
-            <td th:if="${scoreTable.length} % 2 == 1" style="background: lightgray;"><span  th:text="${score.name}: ${score.score}"></span></td>
-        </tr>
-    </tbody>
-</table>
+        </tbody>
+    </table>
 
-<table style="width: 90%;" class="table results purchases" id="purchasesTable">
-    <thead>
-        <tr>
-            <th scope="row" style="width: 55%;">Purchasable At</th>
-            <th>Price</th>
-        </tr>
-    </thead>
-    <tbody class="purchases-body">
-    <tr th:each="purchase : ${purchase}">
-        <td><span th:text="${purchase.name}"></span></td>
-    </tr>
-    <tr>
-        <td style="width: 55%;"><span>WOW</span></td>
-        <td><span>WOW</span></td>
-    </tr><tr>
-        <td style="width: 55%;"><span>WOW</span></td>
-        <td><span>WOW</span></td>
-    </tr><tr>
-        <td style="width: 55%;"><span>WOW</span></td>
-        <td><span>WOW</span></td>
-    </tr><tr>
-        <td style="width: 55%;"><span>WOW</span></td>
-        <td><span>WOW</span></td>
-    </tr><tr>
-        <td style="width: 55%;"><span>WOW</span></td>
-        <td><span>WOW</span></td>
-    </tr><tr>
-        <td style="width: 55%;"><span>WOW</span></td>
-        <td><span>WOW</span></td>
-    </tr><tr>
-        <td style="width: 55%;"><span>WOW</span></td>
-        <td><span>WOW</span></td>
-    </tr><tr>
-        <td style="width: 55%;"><span>WOW</span></td>
-        <td><span>WOW</span></td>
-    </tr><tr>
-        <td style="width: 55%;"><span>WOW</span></td>
-        <td><span>WOW</span></td>
-    </tr><tr>
-        <td style="width: 55%;"><span>WOW</span></td>
-        <td><span>WOW</span></td>
-    </tr><tr>
-        <td style="width: 55%;"><span>WOW</span></td>
-        <td><span>WOW</span></td>
-    </tr><tr>
-        <td style="width: 55%;"><span>WOW</span></td>
-        <td><span>WOW</span></td>
-    </tr><tr>
-        <td style="width: 55%;"><span>WOW</span></td>
-        <td><span>WOW</span></td>
-    </tr><tr>
-        <td style="width: 55%;"><span>WOW</span></td>
-        <td><span>WOW</span></td>
-    </tr><tr>
-        <td style="width: 55%;"><span>WOW</span></td>
-        <td><span>WOW</span></td>
-    </tr>
-    </tbody>
-</table>
+    <script th:inline="javascript">
+    /*<![CDATA[*/
+    $(document).ready(function() {
+        var table = document.getElementById('purchasesTable').getElementsByTagName("tr");
+        for(var i = 0; i < table.length; i++){
 
-<script th:inline="javascript">
-/*<![CDATA[*/
-$(document).ready(function() {
-    var table = document.getElementById('purchasesTable').getElementsByTagName("tr");
-    for(var i = 0; i < table.length; i++){
-
-        if((i % 2) == 1){
-            table[i].className += "odd"
+            if((i % 2) == 1){
+                table[i].className += "odd"
+            }
         }
-    }
-});
-/*]]>*/
-</script>
+    });
 
+    function goToIndex(){
+        window.location = "/";
+    }
+    /*]]>*/
+    </script>
+</div>
 </body>
 <div style="display: hidden;" value="${game.id}"></div>
 </html>
